<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_filme"
            android:id="@+id/edit_query"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:layout_gravity="right"
            android:id="@+id/bt_search"
            />

        <LinearLayout
            android:id="@+id/layout_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Título 123"
            android:id="@+id/title"
            android:background="#dddddd"
            android:padding="2dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            />

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:id="@+id/img"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />
    </FrameLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/bt_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorAccent"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>